verification code debugged
